fix accordion animation and contacts row-gap

--- a/src/components/Contacts/contacts.module.scss
+++ b/src/components/Contacts/contacts.module.scss
@@ -2,10 +2,14 @@
 @use "styles/breakpoints";
 
 .component {
-  height: 58.5%;
+  height: 53%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+
+  @include mixin.media-w(breakpoints.$laptop-s) {
+    height: 70%;
+  }
 }
 
 .subtitle {
